--- a/Desktop/3d-r3js/package.json
+++ b/Desktop/3d-r3js/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.181.2"
